--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ body {
 }
 
 .container {
-  max-width: 21.68rem;
+  max-width: 20.43rem;
   background: var(--white);
   box-shadow: 1px 0px 5px 1px rgb(0, 0, 0, 0.2);
   margin-left: 10px;
@@ -80,6 +80,10 @@ body {
   overflow: hidden;
   white-space: nowrap;
   border: 0;
+}
+
+.card-text-container {
+  background-color: white;
 }
 
 .card-image {
@@ -104,4 +108,60 @@ body {
   font-size: 13px;
   color: var(--dark-blue);
   line-height: 1.5;
+}
+
+.share-img {
+  /* background-color: var(--light-gray-blue); */
+}
+
+.card-footer-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 32px 20px;
+}
+
+.author-content {
+  display: flex;
+  gap: 16px;
+  align-items: center;
+}
+
+.author-info {
+  font-size: 13px;
+  line-height: 1.5;
+}
+
+.author-name {
+  font-weight: 700;
+  color: var(--dark-gray-blue);
+}
+
+.time {
+  color: var(--gray-blue);
+}
+
+.author-img {
+  height: 40px;
+  border-radius: 50%;
+}
+
+.share {
+  display: none;
+}
+
+.toggle-tooltip {
+  text-decoration: none;
+  background-color: var(--light-gray-blue);
+  border: none;
+  cursor: pointer;
+  height: 32px;
+  width: 32px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.tooltip-icons {
 }
