--- a/style.css
+++ b/style.css
@@ -66,7 +66,6 @@ body {
 
 .container {
   max-width: 20.43rem;
-
   box-shadow: 1px 0px 5px 1px rgb(0, 0, 0, 0.2);
   margin-left: 10px;
   margin-right: 10px;
@@ -83,6 +82,10 @@ body {
   white-space: nowrap;
   border: 0;
 }
+
+/* .card {
+  background-color: var(--light-gray-blue);
+} */
 
 .card-text-container {
   background-color: white;
@@ -105,7 +108,7 @@ body {
 }
 
 .card-title {
-  font-size: 16px;
+  font-size: 1rem;
   font-weight: 700;
   color: var(--dark-gray-blue);
   line-height: 1.5;
@@ -113,7 +116,7 @@ body {
 }
 
 .card-content {
-  font-size: 13px;
+  font-size: 0.81rem;
   color: var(--dark-blue);
   line-height: 1.5;
 }
@@ -133,7 +136,7 @@ body {
 }
 
 .author-info {
-  font-size: 13px;
+  font-size: 0.81rem;
   line-height: 1.5;
 }
 
@@ -216,7 +219,7 @@ body {
   }
 
   .card-title {
-    font-size: 20px;
+    font-size: 1.25rem;
     letter-spacing: 0.25px;
     line-height: 1.4;
   }
